# reflex-jupyter-renderer-react

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
custom_components/reflex_jupyter_renderer_react/: __init__.py  jupyter_renderer_react.py  models.py
jupyter_renderer_react_demo/: .gitignore  requirements.txt  rxconfig.py
jupyter_renderer_react_demo/assets/: demo-example.ipynb
jupyter_renderer_react_demo/jupyter_renderer_react_demo/: jupyter_renderer_react_demo.py
specs/api/: component-api.md
specs/data-model/: notebook-schema.md
specs/plans/: implementation-plan.md  tasks.md
specs/prd/: jupyter-renderer-react.md
specs/technical/: architecture.md
tests/: test_component.py  test_models.py
